InnerHTML/outerHTML serializer should include attribute's prefix

Changing MarkupFormatter::AppendAttribute() to include
attribute prefixes if it is in HTML Document.

Bug: 752402
Change-Id: Iaf1304e82e5caf95c19a7f73181afd9f8fa72c1f
Reviewed-on: https://chromium-review.googlesource.com/603210
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Shanmuga Pandi <shanmuga.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#492560}
Former-commit-id: e06d40f52c4a69790bfb31deaea6595b8443fd2c